sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: ')' expected but '}' found.
        }
        ^AlgBubbleSort1:18: error: Unmatched closing brace '}' ignored here
}
^